fix: #1, font size of word meaning too big

--- a/FR Word mining (type in)/FrontTemplate.html
+++ b/FR Word mining (type in)/FrontTemplate.html
@@ -1,6 +1,6 @@
 <!-- This note type was developed by the Kaishi 1.5k team and is soley a modification -->
 <div lang="fr">
-<div style='padding-bottom: 10px'>{{Word}}</div>
-<div style='padding-bottom: 10px'>{{type:Word Meaning}}</div>
+<div style='padding-bottom: 10px; font-size: 44px;'>{{Word}}</div>
+<div style='padding-bottom: 10px; font-size: 44px;'>{{type:Word Meaning}}</div>
 <div style='font-size: 20px;'>{{Sentence}}</div>
 </div>
