refactor: rename Word mining folder, remove declaration of language in html

--- a/Word mining/FrontTemplate.html
+++ b/Word mining/FrontTemplate.html
@@ -1,5 +1,5 @@
 <!-- This note type was developed by the Kaishi 1.5k team and is soley a modification -->
-<div lang="fr">
+<div>
 <div style='padding-bottom: 10px; font-size: 44px;'>{{Word}}</div>
 <div style='padding-bottom: 10px; font-size: 44px;'>{{type:Word Meaning}}</div>
 <div style='font-size: 20px;'>{{Sentence}}</div>
