--- a/Word mining/BackTemplate.html
+++ b/Word mining/BackTemplate.html
@@ -1,5 +1,5 @@
 <!-- This note type was developed by the Kaishi 1.5k team and is soley a modification -->
-<div lang="fr">
+<div>
     <div style='font-size: 44px;'>{{Word}}</div>
     
     <hr id=answer>
@@ -15,4 +15,4 @@
         <div style='font-size: 20px; padding-top:12px;'>Note: {{Notes}}</div>
     {{/Notes}}
     
-    </div>
+</div>
