refactor(Basic type in with note): remove language from html, minor changes

--- a/Basic type in with note/BackTemplate.html
+++ b/Basic type in with note/BackTemplate.html
@@ -1,5 +1,4 @@
-<!-- This note type was developed by the Kaishi 1.5k team and is soley a modification -->
-<div lang="en">
+<div>
     {{Word}}
     
     <hr id=answer>
@@ -10,4 +9,4 @@
         <div style="font-size: 20px; padding-top:12px">Note: {{Notes}}</div>
     {{/Notes}}
     
-    </div>
+</div>
