--- a/Basic type in with note/FrontTemplate.html
+++ b/Basic type in with note/FrontTemplate.html
@@ -1,5 +1,4 @@
-<!-- This note type was developed by the Kaishi 1.5k team and is soley a modification -->
-<div lang="en">
+<div>
     <div style='padding-bottom: 10px'>{{Word}}</div>
     {{type:Word Meaning}}
-    </div>
+</div>
