--- a/src/Word mining JP/BackTemplate.html
+++ b/src/Word mining JP/BackTemplate.html
@@ -14,4 +14,6 @@
     {{#Notes}}
         <div style='font-size: 20px; padding-top: 20px;'>Note: {{Notes}}</div>
     {{/Notes}}
+
+    <div style='font-size: 20px; padding-top: 20px;'>Source: {{Source}}</div>
 </div>
