feat(Word Mining JP): make adding a source optional

--- a/src/Word mining JP/BackTemplate.html
+++ b/src/Word mining JP/BackTemplate.html
@@ -15,5 +15,7 @@
         <div style='font-size: 20px; padding-top: 20px;'>Note: {{Notes}}</div>
     {{/Notes}}
 
+    {{#Source}}
     <div style='font-size: 20px; padding-top: 20px;'>Source: {{Source}}</div>
+    {{/Source}}
 </div>
