--- a/src/Book Mining FR/BackTemplate.html
+++ b/src/Book Mining FR/BackTemplate.html
@@ -9,11 +9,13 @@
     </div>
 
     <!-- Box containing image -->
+    {{#Picture}}
     <div class="column">
       <div class="container">
         <div class="center">{{Picture}}</div>
       </div>
     </div>
+    {{/Picture}}
 </div>
 
 <!-- Sentence -->
