feat: make definition container grow

--- a/src/Book Mining FR/BackTemplate.html
+++ b/src/Book Mining FR/BackTemplate.html
@@ -1,6 +1,6 @@
 <!-- Box Containing Word, Audio and Picture -->
 <div class="row">
-    <div class="column"'>
+    <div class="column definition"'>
       <!-- Box containing Word and Audio -->
       <div class="container">
 					{{Word}}
@@ -11,7 +11,7 @@
     <!-- Box containing image -->
     {{#Picture}}
     <div class="column">
-        <div class="center">{{Picture}}</div>
+        <div class="picture">{{Picture}}</div>
     </div>
     {{/Picture}}
 </div>
